Replace deprecated Class.newInstance() and catch ReflectiveOperationException